--- a/css/style.css
+++ b/css/style.css
@@ -333,15 +333,15 @@ button[type="submit"]:hover {
             flex: 1;
         }
     .input-error {
-    border: 1px solid red;
-    background-image: url('./img/check-malo.svg');
+    border: 2px solid #C92222;
+    background-image: url('/img/check-malo.svg');
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
     background-size: 1rem;
     padding-right: 2rem;
 }
 .input-success {
-    border: 1px solid #ccc;
+    border: 2px solid #00C267;
     background-image: url('/img/check-bueno.svg');
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
@@ -350,15 +350,15 @@ button[type="submit"]:hover {
 }
 .tooltip-error {
     position: absolute;
-    background-color: #f44336;
+    background-color: #C92222;
     color: white;
     padding: 4px 8px;
     font-size: 12px;
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
     z-index: 999;
-    margin-top: 2px;
+    margin-top: -5px;
     display: none;
-    max-width: 100%;
+    width: 100%;
     box-sizing: border-box;
     white-space: normal;
     overflow-wrap: break-word;
@@ -556,6 +556,21 @@ input[type="checkbox"] {
     color: #000;
 }
 
+.password-wrapper {
+  position: relative;
+}
+.password-wrapper input {
+  padding-right: 2.5rem;
+}
+.toggle-password {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  background: none;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
 
     
  @media (min-width: 601px) and (max-width: 1024px) {
