--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,11 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
+.mostrar-boton{
+    width: 20px;
+    height: auto;
+}
+
     
  @media (min-width: 601px) and (max-width: 1024px) {
   .grid-cabecera {
