--- a/css/style.css
+++ b/css/style.css
@@ -227,8 +227,7 @@ select {
   height: 40px;
   width: 100%;
   padding: 0.3rem 0.7rem;
-  background-color: transparent;
-  color: white;
+
   border: 2px solid #39B6C6;
   border-radius: 6px;
   font-size: 1rem;
@@ -236,7 +235,7 @@ select {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg width='10' height='6' viewBox='0 0 10 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0l5 6 5-6H0z' fill='%23ffffff'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg width='10' height='6' viewBox='0 0 10 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0l5 6 5-6H0z' fill='%23000000'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 0.7rem center;
   background-size: 10px 6px;
@@ -304,6 +303,7 @@ form input {
   margin-top: 0.3rem;
   box-sizing: border-box;
   font-size: 1rem;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 button[type="submit"] {
@@ -574,7 +574,7 @@ input[type="checkbox"] {
 
 form img.mostrar-boton {
     width: 20px;
-    margin-top: 7px;
+    margin-top: 4px;
     align-items: center;
 
 }
